okta-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: okta-tap-test-deployment
  labels:
    name: okta-tap-test
spec:
  replicas: 1
  selector:
    matchLabels:
      name: okta-tap-test
  template:
    metadata:
      labels:
        name: okta-tap-test
    spec:
      containers:
      - name: okta-tap-test
        image: registry.tkgharbor.com/okta-test/okta-python-test:v3
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: okta-cluster-ip-svc
spec:
  selector:
    app: okta-tap-test
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
