okta-lb.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    name: okta-tap-test-lb
  name: okta-tap-test-lb
spec:
  ports:
    - port: 80
      targetPort: 8080
  selector:
    name: okta-tap-test
  type: LoadBalancer
